--- a/tssc-admin/admin-web/src/style/login.css
+++ b/tssc-admin/admin-web/src/style/login.css
@@ -1,55 +1,70 @@
-/**
+/***** login *****/
 
- @Name：layuiAdmin 登入注册页
- @Author：贤心
- @Site：http://www.layui.com/admin/
- @License：GPL-2
- 
- */
- 
-html,body,#LAY_app{height:100%;}
-.layui-layout-body{overflow: auto;}
- 
-#LAY-user-login,
-.layadmin-user-display-show{display: block !important;} 
-.layadmin-user-login{position: relative; left: 0; top: 0; padding: 110px 0; min-height: 100%; box-sizing: border-box;}
-.layadmin-user-login-main{width: 375px; margin: 0 auto; box-sizing: border-box;}
-.layadmin-user-login-box{padding: 20px;}
-.layadmin-user-login-header{text-align: center;}
-.layadmin-user-login-header h2{margin-bottom: 10px; font-weight: 300; font-size: 30px; color: #000;}
-.layadmin-user-login-header p{font-weight: 300; color: #999;}
-
-.layadmin-user-login-body .layui-form-item{position: relative;}
-.layadmin-user-login-icon{position: absolute; left: 1px; top: 1px; width: 38px; line-height: 36px; text-align: center; color: #d2d2d2;}
-.layadmin-user-login-body .layui-form-item .layui-input{padding-left: 38px;}
-.layadmin-user-login-codeimg{max-height: 38px; width: 100%; cursor: pointer; box-sizing: border-box;}
-
-.layadmin-user-login-other{position: relative; font-size: 0; line-height: 38px; padding-top: 20px;}
-.layadmin-user-login-other>*{display: inline-block; vertical-align: middle; margin-right: 10px; font-size: 14px;}
-.layadmin-user-login-other .layui-icon{position: relative; top: 2px; font-size: 26px;}
-.layadmin-user-login-other a:hover{opacity: 0.8;}
-
-.layadmin-user-jump-change{float: right;}
-
-.layadmin-user-login-footer{position: absolute; left: 0; bottom: 0; width: 100%; line-height: 30px; padding: 20px; text-align: center; box-sizing: border-box; color: rgba(0,0,0,.5)}
-.layadmin-user-login-footer span{padding: 0 5px;}
-.layadmin-user-login-footer a{padding: 0 5px; color: rgba(0,0,0,.5);}
-.layadmin-user-login-footer a:hover{color: rgba(0,0,0,1);}
-
-/* 有背景图时 */
-.layadmin-user-login-main[bgimg]{background-color: #fff; box-shadow: 0 0 5px rgba(0,0,0,0.05);}
-
-/* 主题背景 */
-.ladmin-user-login-theme{position: fixed; bottom: 0; left: 0; width: 100%; text-align: center;}
-.ladmin-user-login-theme ul{display: inline-block; padding: 5px; background-color: #fff;}
-.ladmin-user-login-theme ul li{display: inline-block; vertical-align: top; width: 64px; height: 43px; cursor: pointer; transition: all .3s; -webkit-transition: all .3s; background-color: #f2f2f2;}
-.ladmin-user-login-theme ul li:hover{opacity: 0.9}
-
-@media screen and (max-width: 768px) {
-  .layadmin-user-login{padding-top: 60px;}
-  .layadmin-user-login-main{width: 300px;}
-  .layadmin-user-login-box{padding: 10px;}
+body,html{
+  height: 100%;
+  width: 100%;
+}
+#LAY_app{
+  height: 100%;
+  width: 100%;
+}
+.yz_login_wrap{
+  background:url(res/login/background01.png) no-repeat center;
+  width: 100%;
+  position:relative;
+  height: 100%;
+  color: #fff;
+  background-size: cover;
+}
+.yz_login_wrap>div{
+  position: absolute;
+  top: 30%;
+  right: 24%;
+}
+.yz_login_title{
+  font-weight: 600;
+  margin-bottom: 1.75rem;
+  line-height: 40px;
+  border-bottom: 1px solid #009688;
+}
+.yz_login_wrap .layui-form-item{
+  margin-bottom: 1.75rem;
 }
 
-
-
+.yz_login_user,.yz_login_password{
+  background: rgba(255,255,255,0.2);
+  border-radius: 3px;
+  height: 3rem;
+}
+.yz_login_wrap input{
+  padding-left: 64px;
+  border: 0;
+  height: 3rem;
+  color: #fff;
+}
+.yz_login_wrap .layui-form-checkbox span,.yz_login_wrap a{
+  color: #fff;
+}
+.yz_login_user input{
+  background:url(res/login/icon_01.png) no-repeat 20px center;
+}
+.yz_login_password input {
+  background:url(res/login/icon_02.png) no-repeat 20px center;
+}
+.yz_loginBtn button{
+  background: #0dc8cb;
+  height: auto;
+  line-height: 19px;
+  padding: 13px 18px;
+  font-size: 15px;
+}
+.yz_login_bottom{
+  float: right;
+  margin:10px 4px 0 0;
+}
+.yz_login_bottom a:first-child{
+  margin-right: 10px;
+}
+.yz_login_bottom a:last-child{
+  margin-left: 10px;
+}
